--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/settings"
+            android:label="@string/settings_title"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
